[tool.poetry]
name = "atat"
version = "0.2.1"
description = "Python ATAT phonon package"
authors = ["Hiori Kino <kino.hiori@nims.go.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
spglib = "^2.4.0"
seekpath = "^2.1.0"
ase = "^3.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
